# DECNET

./: .env.example  .gitignore  .test-deck.ini.swp  CHANGELOG.md  CLAUDE.md  COPYRIGHT  DEBT.md  DEVELOPMENT.md  GEMINI.md  LICENSING.md  Makefile  NOTES.md  README.md  TODO.md  alembic.ini  api-audit.md  arche-test.ini  decnet.db  decnet.db-shm  decnet.db-wal  decnet.ini.example  decnet.json  decnet.loggy  env.config.example  execution_graphs.md  pyproject.toml  requirements-live-tests.txt  ruff.toml  schemat  schemathesis.ci.toml  schemathesis.toml  test-full.ini  test-scan  test.nmap  test_bounty_decnet.db-shm  test_bounty_decnet.db-wal  test_decnet.db-shm  test_decnet.db-wal  test_fleet_decnet.db-shm  test_fleet_decnet.db-wal  (+5 more)
.claude/: settings.local.json
.gitea/workflows/: ci.yml  pr.yml  release.yml  security.yml
.hypothesis/constants/: 05ca8d3a23e4e828  06cf3ea2c6ce1e47  0723f1d37b1d6520  09ef744ca56274d2  0a0f6b9dba9c3bb0  0b7e12fbe6188a74  0ba82ca4ea63f3bc  0da7ee28577247a0  0ff817caa72a52a4  10fe4c38e0f9b043  119d69517b6a1211  12924abcbf0c075f  136282b746ebc317  15d50d1e53b9b5c3  16c3436398292e7b  1b93688452019c2a  1ba0b973b7599de4  1f005a833d034313  1f12b014d4fe2068  2107e411391c4391  2220ccbe8a25f02d  2478ea431ee48b03  2754c329ba29d0cd  281f7247b75633fa  28aabd7532da8ac5  2d0b4c8c54bbb44a  2f0b53ebdb35c4e1  3048c6da87ba838d  30a7ffe86227f7f1  37d6bf6c6c0b58e6  390599cfc019e671  390b2f90b99b41d6  3cc47bb868bcb8f4  407fc1fdd6e042af  409656273e7d498b  413af714a6aa554a  42a1dcb5c22b1ac1  4b12b89e1879f5ab  4cd7a4f95d87415b  4dac674385794ba3  (+95 more)
artifacts/: curl.sh  curl.sh.1  evil.sh  wget.sh  wget.sh.1
bait/: README.md
decnet/: __init__.py  archetypes.py  cli.py  composer.py  config.py  config_ini.py  custom_service.py  deployer.py  distros.py  env.py  fleet.py  ini_loader.py  models.py  mutator.py  network.py  offload.py  os_fingerprint.py  paths.py  prefork.py  privdrop.py  supervisor.py  telemetry.py
decnet/agent/: __init__.py  app.py  executor.py  heartbeat.py  server.py  topology_ops.py  topology_store.py
decnet/artifacts/: __init__.py  paths.py  shards.py
decnet/asn/: __init__.py  base.py  factory.py  lookup.py  paths.py
decnet/bus/: __init__.py  app.py  base.py  factory.py  fake.py  protocol.py  publish.py  topics.py  unix_client.py  unix_server.py  worker.py
decnet/canary/: __init__.py  _obfuscate_helper.js  base.py  cultivator.py  dns_server.py  factory.py  fingerprint_payload.js  obfuscator.py  package.json  paths.py  planter.py  storage.py  worker.py
decnet/cli/: __init__.py  agent.py  api.py  bus.py  canary.py  db.py  deploy.py  emailgen.py  fleet.py  forwarder.py  gating.py  geoip.py  init.py  inventory.py  lifecycle.py  listener.py  orchestrator.py  profiler.py  realism.py  reconciler.py  sniffer.py  supervise.py  swarm.py  swarmctl.py  topology.py  ttp.py  updater.py  utils.py  web.py  webhook.py  workers.py
decnet/cloak/: __init__.py  __main__.py  mangler.py  responder.py
decnet/clustering/: __init__.py  base.py  factory.py  ukc.py  worker.py
decnet/collector/: __init__.py  worker.py
decnet/correlation/: __init__.py  attribution_worker.py  engine.py  event_kinds.py  fingerprint_rotation.py  graph.py  parser.py  reuse_worker.py
decnet/data/: .gitignore
decnet/decky_io/: __init__.py  resolve.py  (+1 more)
decnet_web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
deploy/: decnet-agent.service  decnet-agent.service.j2  decnet-api.service  decnet-api.service.j2  decnet-attribution.service.j2  decnet-bus.service  decnet-bus.service.j2  decnet-campaign-clusterer.service.j2  decnet-canary.service.j2  decnet-clusterer.service.j2  decnet-collector.service  decnet-collector.service.j2  decnet-emailgen.service.j2  decnet-enrich.service.j2  decnet-fleet-heavy.service.j2  decnet-forwarder.service  decnet-forwarder.service.j2  decnet-listener.service  decnet-listener.service.j2  decnet-mutator.service  decnet-mutator.service.j2  decnet-orchestrator.service.j2  decnet-prober.service  decnet-prober.service.j2  decnet-profiler.service  decnet-profiler.service.j2  decnet-reconciler.service.j2  decnet-reuse-correlator.service.j2  decnet-sniffer.service  decnet-sniffer.service.j2  decnet-supervise-batch.service.j2  decnet-supervise-cpu.service.j2  decnet-swarmctl.service  decnet-swarmctl.service.j2  decnet-ttp.service.j2  decnet-updater.service  decnet-updater.service.j2  decnet-web.service  decnet-web.service.j2  decnet-webhook.service.j2  (+1 more)
development/: ADR-001-FLEET-SOURCE-OF-TRUTH.md  ATTRIBUTION-ENGINE.md  BEHAVE-EXTRACTOR.md  BEHAVE-INTEGRATION.md  BUGS.md  BUG_FIXES.md  CAMPAIGN_CLUSTERING.md  COVERAGE.md  DEBT.md  DEVELOPMENT.md  DEVELOPMENT_V2.md  EVENTS.md  FUTURE.md  HARDENING.md  ICS_SCADA.md  IDENTITY_RESOLUTION.md  IMAP_BAIT.md  NOTES.md  REALISM_AUDIT.md  RELEASE-1.1.md  SIGNAL_CAPTURE_AUDIT.md  SMTP_RELAY.md  STATIC-TYPES.md  THREAT_MODEL.md  TTP_TAGGING.md  ast_graph.md  complete_execution_graph.md  docker-compose.otel.yml  improvements.md  nmap-output-post-fixes.txt  postpostfixnmap.txt
scripts/: decnet-init.sh  mock-webhook-receiver.py  vulture_whitelist.py
temp_web/: package-lock.json  package.json
templates/: decnet_logging.py
tests/: .test_web_api_fuzz.py.swp  conftest.py  mysql_spinup.sh  prefork_driver.py  test_admin_seed.py  test_api_attackers.py  test_archetypes.py  test_attacker_worker.py  test_auth_async.py  test_auto_spawn.py  test_base_repo.py  test_bounty.py  test_build.py  test_cli.py  test_cli_db_reset.py  test_cli_service_pool.py  test_collector.py  test_composer.py  test_config.py  test_config_ini.py  test_correlation.py  test_custom_service.py  test_decnet.db-shm  test_decnet.db-wal  test_deployer.py  test_env_lazy_jwt.py  test_factory.py  test_fingerprinting.py  test_fleet.py  test_fleet_api.py  test_fleet_singleton.py  test_health_config_cache.py  test_ingester.py  test_ini_loader.py  test_ini_spaces.py  test_inode_aware_handler.py  test_log_file_mount.py  test_logging_forwarder.py  test_mode_gating.py  test_mutator.py  (+28 more)
tools/: add_spdx_headers.py
(+2093 files in other folders)
